build/build_output.log
[ 17%] Built target shaders_spirv
[ 20%] Building CXX object CMakeFiles/sisterapp.dir/src/core/graphics_context.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:117:10: error: redefinition of ‘uint32_t core::GraphicsContext::queueFamilyIndex() const’
  117 | uint32_t GraphicsContext::queueFamilyIndex() const { return queueFamilyIndex_; }
      |          ^~~~~~~~~~~~~~~
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.h:48:14: note: ‘uint32_t core::GraphicsContext::queueFamilyIndex() const’ previously defined here
   48 |     uint32_t queueFamilyIndex() const { return queueFamilyIndex_; }
      |              ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:118:6: error: no declaration matches ‘bool core::GraphicsContext::supportsWireframe() const’
  118 | bool GraphicsContext::supportsWireframe() const { return supportsWireframe_; }
      |      ^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:118:6: note: no functions named ‘bool core::GraphicsContext::supportsWireframe() const’
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.h:22:7: note: ‘class core::GraphicsContext’ defined here
   22 | class GraphicsContext {
      |       ^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp: In member function ‘void core::GraphicsContext::createLogicalDevice()’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:285:9: error: ‘supportsWireframe_’ was not declared in this scope
  285 |         supportsWireframe_ = true;
      |         ^~~~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:288:9: error: ‘supportsWireframe_’ was not declared in this scope
  288 |         supportsWireframe_ = false;
      |         ^~~~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp: At global scope:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:65:16: warning: ‘VkExtent2D core::{anonymous}::chooseExtent(const VkSurfaceCapabilitiesKHR&, SDL_Window*)’ defined but not used [-Wunused-function]
   65 |     VkExtent2D chooseExtent(const VkSurfaceCapabilitiesKHR& caps, SDL_Window* window) {
      |                ^~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/graphics_context.cpp:26:14: warning: ‘VkFormat core::{anonymous}::findSupportedDepthFormat(VkPhysicalDevice)’ defined but not used [-Wunused-function]
   26 |     VkFormat findSupportedDepthFormat(VkPhysicalDevice physicalDevice) {
      |              ^~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/sisterapp.dir/build.make:177: CMakeFiles/sisterapp.dir/src/core/graphics_context.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
